--- a/packages/ui/public/index.html
+++ b/packages/ui/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Auth</title>
+    <title>UI Components</title>
 </head>
 <body>
-    <div id="_auth-dev-root"></div>
+    <div id="_ui-dev-root"></div>
 </body>
 </html>
